# agentsync

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  SECURITY.md  aisync.toml
.ai/: hooks.toml  instructions.md  mcp.toml
.ai/memory/: architecture.md  debuggingtipstest.md  project-patterns.md
.claude/: .mcp.json  settings.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: status-no-table-when-synced.md
.planning/debug/resolved/: memory-import-no-graceful-empty.md  status-no-table-when-synced.md  sync-dryrun-skip-no-guidance.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-add-cursor-plugin-ecosystem-support/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/01-foundation-and-data-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-core-sync-loop-mvp/: 02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-RESEARCH.md  02-VERIFICATION.md  2-UAT.md
.planning/phases/03-memory-and-hooks/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-CONTEXT.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-watch-mode-bidirectional-sync/: 04-01-PLAN.md  04-02-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-polish-and-distribution/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-RESEARCH.md
.planning/phases/07-windsurf-codex-adapters/: 07-01-SUMMARY.md  07-02-SUMMARY.md
.planning/phases/08-add-tool-command/: 08-01-SUMMARY.md
.planning/phases/09-plugin-sdk-crate-extraction/: 09-02-SUMMARY.md  09-RESEARCH.md
.planning/phases/10-declarative-toml-adapters/: 10-RESEARCH.md
.planning/phases/11-compile-time-registration/: 11-01-SUMMARY.md  11-02-SUMMARY.md
.planning/phases/12-types-trait-foundation/: 12-01-SUMMARY.md
.planning/phases/13-multi-file-rule-sync/: 13-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/aisync/: Cargo.toml
crates/aisync-adapter/: Cargo.toml
crates/aisync-adapter/src/: lib.rs
crates/aisync-core/: Cargo.toml
crates/aisync-core/examples/: basic_sync.rs
crates/aisync-core/src/: adapter.rs  add_tool.rs  agents.rs  commands.rs  conditional.rs  config.rs  declarative.rs  detection.rs  diff.rs  error.rs  gitignore.rs  hooks.rs  init.rs  lib.rs  managed_section.rs  mcp.rs  memory.rs  plugin_translator.rs  plugins.rs  rules.rs  security.rs  skills.rs  sync.rs  types.rs  watch.rs
crates/aisync-core/src/adapters/: claude_code.rs  codex.rs  cursor.rs  mod.rs  opencode.rs  windsurf.rs
crates/aisync-types/: Cargo.toml
crates/aisync-types/src/: lib.rs
crates/aisync/src/: main.rs
crates/aisync/src/commands/: add_tool.rs  check.rs  diff.rs  hooks.rs  init.rs  memory.rs  mod.rs  plugin.rs  status.rs  sync.rs  watch.rs
crates/aisync/tests/integration/: helpers.rs  main.rs  test_add_tool.rs  test_hooks_e2e.rs  test_init.rs  test_plugin_e2e.rs  test_round_trip.rs  test_sync.rs
docs/: ADAPTER-AUTHORING.md  ARCHITECTURE.md
examples/adapter-example/: Cargo.toml
fixtures/ambiguous/: AGENTS.md
fixtures/claude-only/: CLAUDE.md
fixtures/cursor-legacy/: .cursorrules
fixtures/multi-tool/: AGENTS.md  CLAUDE.md
fixtures/opencode-only/: AGENTS.md
fixtures/windsurf-legacy/: .windsurfrules
(+110 files in other folders)
