[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
sha2 = "0.10"
colored = "3.1"
serde_json = "1.0"
hex = "0.4"
dirs = "6.0"
