[package]
name = "aisync-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Core library for aisync"
license = "MIT"
repository = "https://github.com/pmannion/agentsync"
publish = false

[dependencies]
aisync-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
similar = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
