[package]
name = "aisync"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
aisync-core = { path = "../aisync-core" }
clap = { workspace = true }
dialoguer = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
ctrlc = { workspace = true }
clap_complete = { workspace = true }
